--- a/openContextReader/ocSearch.html
+++ b/openContextReader/ocSearch.html
@@ -768,6 +768,7 @@
 
     <button onclick="openTab()" id="searchButton">Search</button>
     <button onclick="reset()"id="resetButton">Search Reset</button>
+    <button onclick="returnHome()" id="homePage">Home</button>
 
 </div>
 
