--- a/Projects-Landing-Page-main-copy/projects-page.html
+++ b/Projects-Landing-Page-main-copy/projects-page.html
@@ -125,7 +125,7 @@
       </div>
 
           <!-- FINAL PROJECT – GITHUB LINK -->
-    <div id="project-last" class="project">
+    <div id="project-last" class="col project">
       <a href="https://github.com/CalebUmass/static-web-showing" target="_blank">
         <div class="overlay">
           <div class="text">
