--- a/projected-coordinates-project-copy/converter.html
+++ b/projected-coordinates-project-copy/converter.html
@@ -10,6 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display:ital@0;1&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Cormorant+Infant:ital,wght@0,300..700;1,300..700&display=swap"
         rel="stylesheet">
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 
 </head>
 
