--- a/Projects-Landing-Page-main-copy/projects-page.html
+++ b/Projects-Landing-Page-main-copy/projects-page.html
@@ -111,7 +111,7 @@
         </a>
       </div>
 
-      <!-- Placeholder Project (optional, can be removed) -->
+      <!-- PROJECT 6 -->
       <div id="project-6" class="col project">
         <a href="../3d-viewer/index.html">
           <div class="overlay">
@@ -123,6 +123,20 @@
           </div>
         </a>
       </div>
+
+    <!-- PROJECT TEMPLATE -->
+    <!--Copy and paste this template above this to add your project(don't forget to remove the comment signs)-->
+      <!--<div id="project-#" class="col project">
+        <a href="your link here">
+          <div class="overlay">
+            <div class="text">
+              <h3>Your title</h3>
+              <i>Your name</i><br><br>
+              Your description<br><br>
+            </div>
+          </div>
+        </a>
+      </div>-->
 
           <!-- FINAL PROJECT – GITHUB LINK -->
     <div id="project-last" class="col project">
