--- a/Projects-Landing-Page-main-copy/index.html
+++ b/Projects-Landing-Page-main-copy/index.html
@@ -1,34 +1,38 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<html lang="en">
 
 <head>
-    <title>Home</title>
-    <link rel="stylesheet" href="homepage.css">
-    <!--Links to fonts-->
-    <link rel="preconnect" href="https://fonts.googleapis.com"> 
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link href="homepage.css" rel="stylesheet">
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
-    <link
-        href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&family=Source+Serif+4:ital,opsz,wght@0,8..60,200..900;1,8..60,200..900&display=swap"
-        rel="stylesheet">
+
+    <title>Home</title>
 </head>
 
 <body>
-    <div class="container" id="home">
-        <div id="image"></div> <!--This holds the background image-->
-
-        <div id="pagebody">
-            <div class="headings">
-                <h2 id="subheading">Poggio Civitate</h2> <!--Subheading-->
-                <h1 id="heading">Data Science Projects</h1> <!--Heading-->
+    <div class="container-fluid" id="background"> <!--Contains everything on the page-->
+        <div class="forText"> <!--Contains all the text elements, including the button-->
+            <div class="text">
+                <h3>Poggio Civitate</h3> <!--Subheading-->
+                <h2>Data Science Projects</h2><!--Heading-->
+                <a href="projects-page.html" id="buttonContain">
+                    <button class="btn"id="exploreProjects">Explore</button>
+                </a> <!--Button that takes you to projects page-->
             </div>
-            <div class="buttons">
-                <a href="projects-page.html"> <!--Links to projects-page.html-->
-                    <button id="projbutton">EXPLORE</button> <!--Button that takes you to projects-page.html-->
-                </a>
+            <div class="credits">
+                <p>Photo by Patrick Schneider</p> <!--This is the image accreditation-->
             </div>
         </div>
+
+        <div class="forImage"></div> <!--This holds the background image-->
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
+
 </body>
 
 </html>
