--- a/Projects-Landing-Page-main-copy/projects-page.html
+++ b/Projects-Landing-Page-main-copy/projects-page.html
@@ -51,8 +51,8 @@
         <div class="overlay">
           <div class="text">
             <h3>How to Use this Website</h3>
-            Hover over boxes to see a description of the project with ease.<br><br>
-            Click on boxes to go to the project with ease.<br><br>
+            Hover over boxes to see a description of the project.<br><br>
+            Click on boxes to go to the project.<br><br>
             Click the ☰ icon at the top to open the project list view with ease.
           </div>
         </div>
