--- a/Lightbox-Gallery/index.html
+++ b/Lightbox-Gallery/index.html
@@ -555,9 +555,9 @@
                             const newTag = document.createElement("button"); //newTag is the brand new pill button we are making for each tag
 
                             if (filter.id === "Year") { //we do this if the filter we are iterating through is the year filter (because we need to check that there is a year included)
-                                console.log(tag);
                                 try {
                                     let testingifYear = parseInt.tag(); //we try to get parse the tag as an integer
+                                    console.log(testingifYear);
                                     newTag.id = `${tag}`; //if it works, we make the id and the text content equivalent to its year
                                     newTag.textContent = tag;
                                 } catch { //if it doesn't work, we make a new tag called unknown.
