--- a/Lightbox-Gallery/index.html
+++ b/Lightbox-Gallery/index.html
@@ -553,7 +553,9 @@
 
                         tagsSet.forEach(tag => { //for each array in tagset
                             const newTag = document.createElement("button"); //newTag is the brand new pill button we are making for each tag
+                            console.log("This is the tag ", tag);
 
+                            console.log("This is filter.id ", filter.id);
                             if (filter.id === "Year") { //we do this if the filter we are iterating through is the year filter (because we need to check that there is a year included)
                                 try {
                                     let testingifYear = parseInt.tag(); //we try to get parse the tag as an integer
